--- a/package.json
+++ b/package.json
@@ -12,9 +12,16 @@
     "preview": "gatsby build && gatsby serve"
   },
   "dependencies": {
+    "@reflexjs/gatsby-plugin-metatags": "^0.1.2",
     "@reflexjs/gatsby-theme-base": "^0.2.3",
+    "@reflexjs/gatsby-theme-core": "^0.3.0",
+    "@reflexjs/gatsby-theme-post": "^0.3.1",
     "gatsby": "^2.22.11",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-hook-form": "^6.0.2",
+    "smooth-scroll": "^16.1.3",
+    "typeface-lato": "0.0.75",
+    "typeface-raleway": "0.0.75"
   }
 }
